# oli_chatbot

./: README.md  app.py  pyproject.toml  test.ipynb  vector_store.py
faiss_index/: index.faiss  index.pkl
src/: ai.py  doc_loader.py
